--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -1,3 +1,10 @@
+* { box-sizing: border-box; }
+html,body { 
+  height: 100%; 
+  width: 100%; 
+  background: rgb(14,3,28);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
